<resources>
    <string name="app_name">Avaliações</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_disciplinas">Disciplinas</string>
    <string name="title_activity_avaliacoes">Avaliações</string>
    <string name="title_activity_disciplina">Disciplina</string>
    <string name="title_activity_avaliacao">Avaliação</string>
    <string name="title_activity_tipos_de_avaliacao">Tipos de Avaliação</string>
    <string name="title_activity_tipo_avaliacao">Tipo De Avaliacao</string>
    <string name="title_activity_configuracoes">Configurações</string>


    <string name="action_renomear">Renomear</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_deletar">Deletar</string>
    <string name="action_selecionar">Selecionar</string>
    <string name="action_settings">Settings</string>

    <string name="label_tipo_avaliacao">Tipo</string>
    <string name="label_observacao">Observação</string>
    <string name="label_data">Data</string>
    <string name="label_add_tipo_avaliacao">Informe o nome do tipo de avaliação</string>
    <string name="label_deletar_avaliacao">Deletar esta avaliação?</string>
    <string name="label_deletar_disciplina">Deletar esta disciplina?</string>
    <string name="label_renomear_disciplina">Informe o novo nome da disciplina</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_notificar">Notificar</string>
    <string name="label_antecedencia_notificacao">Antecedencia em dias</string>

</resources>
